@@ -1,6 +1,6 @@
 Package: oce
-Version: 0.6-9
-Date: 2011-10-01
+Version: 0.6-10
+Date: 2011-10-02
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
