@@ -6,6 +6,7 @@
 \usage{
 as.ctd(salinity, temperature, pressure,
    oxygen, nitrate, nitrite, phosphate, silicate,
+   other, missingValue,
    quality, 
    ship="", scientist="", institute="", address="", cruise="", station="", 
    date="", startTime="", recovery="",
@@ -27,6 +28,9 @@ as.ctd(salinity, temperature, pressure,
   \item{nitrite}{optional nitrite concentration [micromole/kg]}
   \item{phosphate}{optional phosphate concentration [micromole/kg]}
   \item{silicate}{optional silicate concentration [micromole/kg]}
+  \item{other}{optional list of other data columns that are not in the standard list}
+  \item{missingValue}{optional missing value, indicating data that should be
+      taken as \code{NA}.}
   \item{quality}{quality flag, e.g. from the salinity quality flag in WOCE
      data.  (In WOCE, \code{quality=2} indicates good data, 
      \code{quality=3} means questionable data, and \code{quality=4}
